# Algorithm

./: CMakeLists.txt  Readme.md  main.cpp
backTrack/: queen.cpp
dp/: data.in  dp.cpp
heap/: heap.cpp
mergeSort/: MergeSort.cpp
quickSort/: QuickSort.cpp
unsortBinSearch/: unsortBinSerch.cpp
